# agentry

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS
.github/workflows/: ci.yml
actor/: Cargo.toml  agentry-actor.types  manifest.toml
actor/src/: lib.rs
docs/: daemon.md
recipes/: README.md
recipes/email-agent/: CLAUDE.md  Dockerfile  README.md  email  launch.sh  recipe.toml
scripts/: agentry-helpers.sh
src/: client.rs  cmd.rs  daemon.rs  main.rs  protocol.rs  recipe.rs  session.rs
src/assets/: agent.Dockerfile  onboarding-agent.CLAUDE.md  onboarding-agent.launch.sh  onboarding-agent.recipe.toml
