[package]
name = "agentry"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing local AI agent sessions: recipes, worktrees, and tmux-backed lifecycle."
repository = "https://github.com/colinrozzi/agentry"
license = "MIT OR Apache-2.0"

[[bin]]
name = "agentry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
directories = "5"
