[workspace]
members = ["actor"]
resolver = "2"

[package]
name = "agentry"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for running local AI agent sessions from recipes, with a declarative lifecycle."
repository = "https://github.com/colinrozzi/agentry"
license = "MIT OR Apache-2.0"

[[bin]]
name = "agentry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
directories = "5"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing"] }

[profile.release]
opt-level = "s"
lto = true
